--- a/aria2.conf.example
+++ b/aria2.conf.example
@@ -44,12 +44,16 @@ max-tries=0
 #服务器返回文件找不到最大重试次数， 0 为一直重试，默认为 0
 max-file-not-found=10
 # 同服务器最大连接数，默认 1（好像不能使用过大的值，窝用20无法打开aria2）
-max-connection-per-server=10
+max-connection-per-server=16
 # 最小文件分段大小, 默认 20M
 # 如果文件大小 < (min-split-size * split)则不分段
-min-split-size=1M
+min-split-size=2M
 # 单文件最大线程数, 默认 5
-#split=5
+split=8
+# 使用服务器文件时间，默认 false
+remote-time=true
+# 使用 UTF-8 编码，默认 false???
+content-disposition-default-utf8=true
 
 #referer ，这里由下载管理器调用
 #如果为 * ，下载 URI 也可以是 referer ，这在开启 parameterized-uri 时很有用
