--- a/aria2.conf.example
+++ b/aria2.conf.example
@@ -114,7 +114,7 @@ no-file-allocation-limit=4096K
 # 任务记录
 input-file=aria2.session
 # 保存错误/未完成的任务记录
-# 会在 dir 下生成同名.aria2文件，当 force-save=true 时完成时删除， force-save=false 时不删除
+# 会在 dir 下生成同名 .aria2 文件，当 force-save=true 时不删除， force-save=false 时删除
 save-session=aria2.session
 # 每隔几秒保存，默认 0， 0 为 aria2 退出时保存，不管设置为多少 aria2 退出时都会保存 session
 save-session-interval=60
@@ -123,8 +123,8 @@ save-session-interval=60
 # 简单来说： false 不保存完成记录，true 保存完成记录
 #force-save=true
 
-# 强迫症专用， force-save=true 时删除同名.aria2
-# .bat windows用， .sh linux用，需要在bat/sh里自己修改 dir
+#强迫症专用， force-save=true 时删除 dir 下同名.aria2
+# .bat windows 用， .sh linux 用，需要在 bat/sh 里自己修改 dir
 #on-download-complete=del.bat
 #on-bt-download-complete=del_bt.bat
 #on-download-complete=rm.sh
