--- a/aria2.conf
+++ b/aria2.conf
@@ -1,4 +1,6 @@
 # 更详细配置介绍请访问 https://aria2.github.io/manual/en/html/
+# 配置中下载管理器为 Flashgot 配合 py 脚本，其他下载管理器不一定能调用参数
+
 # 全局代理
 #all-proxy=http://127.0.0.1:1080/pac?auth=
 # 代理请求方式，可用值 get, tunnel ，HTTPS 下载时一直使用 tunnel
@@ -11,7 +13,7 @@
 #rpc-user=user
 # 密码
 #rpc-passwd=passwd
-# token验证
+# token 验证
 # 值可以为：我就是叫紫妈怎么了？有本事突然从我背后出现，把我的脸按在键盘上3sw4yde5uf6tgyhujikpo
 rpc-secret=3sw4yde5uf6tgyhujikpo
 # 允许rpc ，默认 false
@@ -20,13 +22,13 @@ enable-rpc=true
 rpc-allow-origin-all=true
 # 外部访问，默认 false
 rpc-listen-all=true
-# https加密，启用之后要设置公钥,私钥的文件路径
+# https 加密，启用之后要设置公钥,私钥的文件路径
 #rpc-secure=true
 # 加密设置公钥
 #rpc-certificate=example.crt
 # 加密设置私钥
 #rpc-private-key=example.key
-# rpc端口，默认 6800
+# rpc 端口，默认 6800
 #rpc-listen-port=6800
 
 
@@ -64,15 +66,15 @@ content-disposition-default-utf8=true
 max-resume-failure-tries=5
 
 
-#referer ，这里由下载管理器调用
+# referer ，这里由下载管理器调用
 #如果为 * ，下载 URI 也可以是 referer ，这在开启 parameterized-uri 时很有用
 #referer=<REFERER>
-#参数化URI， balabala 不懂，默认 false
+# 参数化 URI ， balabala 不懂，默认 false
 #Enable parameterized URI support. You can specify set of parts: http://{sv1,sv2,sv3}/foo.iso. Also you can specify numeric sequences with step counter: http://host/image[000-100:2].img. A step counter can be omitted. If all URIs do not point to the same file, such as the second example above, -Z option is required. Default: false
 #parameterized-uri=true
 
 # 全局下载速度限制
-# 0为不受限制，默认为0，大小为 bytes/sec ，也可以使用 K 或 M，下同
+# 0 为不受限制，默认为 0 ，大小为 bytes/sec ，也可以使用 K 或 M ，下同
 #max-overall-download-limit=0
 # 单文件下载速度限制
 #max-download-limit=0
@@ -86,13 +88,13 @@ max-resume-failure-tries=5
 # 文件保存路径，这里由下载管理器调用，默认为 Aria2 所在文件夹
 #dir=
 # 文件缓存，缓存到内存里，大小使用 K 或 M ，为 0 时关闭，默认 16M
-disk-cache=64M
+#disk-cache=64M
 # 将文件映射到内存，如果文件没有预分配不能工作，默认 false
 enable-mmap=true
 # 映射内存文件大小最大限制
 # 文件大小由一次下载中的全部文件决定，如果总大小大于设定值则禁用mmap
 # 默认9223372036854775807 (单位有点迷)
-max-mmap-limit=1280M
+#max-mmap-limit=1280M
 # 文件预分配
 # 可用值 none, prealloc, trunc, falloc ，默认 prealloc
 # 当使用新型文件系统，如 ext4, btrfs, xfs 或者 NTFS 文件系统时，推荐使用 falloc ，这种方式会在瞬间完成大文件（数 GB ）的空间分配
@@ -116,7 +118,7 @@ input-file=aria2.session
 # 保存错误/未完成的任务记录
 # 会在 dir 下生成同名 .aria2 文件，当 force-save=true 时不删除， force-save=false 时删除
 save-session=aria2.session
-# 每隔几秒保存，默认 0， 0 为 aria2 退出时保存，不管设置为多少 aria2 退出时都会保存 session
+# 每隔几秒保存，默认 0 ， 0 为 aria2 退出时保存，不管设置为多少 aria2 退出时都会保存 session
 save-session-interval=60
 # 即使任务被移除或完成了也保存 session （使用 save-session 值） ，对 BT 有用，默认 false
 # 会检查 session ，打开后如果按照本配置打开 aria2 下载下来的文件如果没有删除元数据会再给你下载下来
