update default conf

--- a/aria2.conf
+++ b/aria2.conf
@@ -20,7 +20,7 @@ rpc-secret=3sw4yde5uf6tgyhujikpo
 enable-rpc=true
 # 允许所有来源， web 界面跨域权限需要，默认 false
 rpc-allow-origin-all=true
-# 外部访问，默认 false
+# 外部访问，默认 false， false 时只监听本地端口
 rpc-listen-all=true
 # https 加密，启用之后要设置公钥,私钥的文件路径
 #rpc-secure=true
@@ -63,7 +63,7 @@ content-disposition-default-utf8=true
 #always-resume=
 # 最大能重命名几个文件，和 always-resume 有关
 # 下载多个度盘打包文件的时候会重命名为 pack.zip, pack.1.zip... 这样，默认 0
-max-resume-failure-tries=5
+#max-resume-failure-tries=5
 
 
 # referer ，这里由下载管理器调用
@@ -90,7 +90,8 @@ max-resume-failure-tries=5
 # 文件缓存，缓存到内存里，大小使用 K 或 M ，为 0 时关闭，默认 16M
 #disk-cache=64M
 # 将文件映射到内存，如果文件没有预分配不能工作，默认 false
-enable-mmap=true
+# mmap 需要系统和内核支持
+#enable-mmap=true
 # 映射内存文件大小最大限制
 # 文件大小由一次下载中的全部文件决定，如果总大小大于设定值则禁用mmap
 # 默认9223372036854775807 (单位有点迷)
