--- a/aria2.conf
+++ b/aria2.conf
@@ -131,7 +131,7 @@ save-session-interval = 60
 #on-download-complete = del.bat
 #on-bt-download-complete = del_bt.bat
 #on-download-complete = rm.sh
-#on-bt-download-complete = rm_bt.bat
+#on-bt-download-complete = rm_bt.sh
 
 # 日志
 # 级别，可用值 debug, info, notice, warn, error ，默认 debug
